--- a/index.html
+++ b/index.html
@@ -27,18 +27,15 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <h2>Correlations Discovered Between Poverty and Obesity</h2>
+          <p>It is well known that poorer Americans are more likely to be obese or suffer from diabetes; there is a strong 
+            negative correlation between household income and both obesity and diabetes. This negative correlation, however, 
+            has only developed in the past 30 years, according to researchers.</p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Possible reasons why people with lower income are more vulnerable to obesity: the framework of social 
+            determinants of health indicates that material conditions confine one’s access to (healthy) food and healthcare,
+            while also influencing health-related behaviours (ie, dietary behaviours and physical activity), and psychosocial 
+            factors that derive from relative deprivation (eg, control over life, insecurity, social isolation, stress)</p>
         </div>
       </div>
     </div>
